# GoodWeb

./: .gitignore  Cargo.toml  README.md  package.json
example-website/components/: CmpButton.html  NavBar.css  NavBar.html  NavItem.html  Page.html
example-website/pages/: a.html  b.html  c.html  index.html
src/: index.js  main.rs  nodevisitor.js  page-rendering.d.ts  page-rendering.js  page_builder.rs  parsing.js  pseudo-html-parser.d.ts  pseudo-html-parser.js  templating.rs  website_parser.rs
