[package]
name = "good-web"
version = "0.1.0"
authors = ["SirJosh3917 <SirJosh3917@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
panic = 'abort'

[dependencies]
# handlebars: powerful templating engine
handlebars = "3.0.1"

# handlebars depends on serde for the template engine.
serde = { version = "1.0.104", features = ["derive"] }

# handlebars likes json-specific state
serde_json = "1.0.48"

# roxmltree: xml parser for goodweb components & pages
roxmltree = "0.10.0"

# walks directories while building to search for all files
walkdir = "2.3.1"

# used to write xml tags with computed values
xmlwriter = "0.1.0"
